--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.bluecove-2.1.0.jar=S:\\Dumbledore\\work\\software\\netbeans\\flypad\\FlypadHost\\lib\\bluecove-2.1.0.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\albus\\.netbeans\\6.9\\build.properties
