--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bluecove-2.1.0.jar=lib/bluecove-2.1.0.jar
+file.reference.examples.jar=lib\\examples.jar
+file.reference.FlypadBluetooth-1.0.0.jar=lib/FlypadBluetooth-1.0.0.jar
+file.reference.FlypadJoystick-1.1.0.jar=lib/FlypadJoystick-1.1.0.jar
+file.reference.FlypadLogger-1.0.0.jar=lib/FlypadLogger-1.0.0.jar
+file.reference.jna.jar=lib\\jna.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bluecove-2.1.0.jar}
+    ${file.reference.bluecove-2.1.0.jar}:\
+    ${file.reference.FlypadBluetooth-1.0.0.jar}:\
+    ${file.reference.examples.jar}:\
+    ${file.reference.jna.jar}:\
+    ${file.reference.FlypadJoystick-1.1.0.jar}:\
+    ${file.reference.FlypadLogger-1.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
